class MetodoSeleccion {
  seleccionar(articulos) {
    throw new Error("Method 'seleccionar()' must be implemented.");
  }
}

module.exports = MetodoSeleccion;
